--- a/contact.html
+++ b/contact.html
@@ -14,11 +14,11 @@
   <header>
     <div class="header-container">
         <label for="menu-checkbox" class="hamburger-icon"><i class="fas fa-bars"></i></label>
-       
+        <input type="checkbox" id="menu-checkbox">
         <a href="index.html" class="logo">Community Science Museum</a>
      <div class="nav-bottom">
         <nav>
-          <ul>
+          <ul class="nav-ul">
             <li><a href="index.html">Home</a></li>
             <li><a href="events.html">Events</a></li>
             <li><a href="exhibition.html">Exhibition</a></li>
@@ -53,21 +53,19 @@
              <input type="submit" value="Send" class="cta_send">
           </div>
           </form>
-        
-        <figure class="contact-img-container">
+          <figure class="contact-img-container">
           <img class="contact-image" src="images/contact-us-museum.jpg" alt="A long corridor inside a beautiful museum. Where at the end there is an 
           arched door">
         </figure>
       </div>
       </section> 
-
     </main>
     <footer>
       <div class="footer-container">
           <div class="help">
             <h3 class="footer-heading">Help</h3>
               <ul>
-                <li>Contact us</li>
+                <li><a href="contact.html">Contact</a></li>
                 <li>Accessibility</li>
                 <li>Get involved</li>
               </ul>
