--- a/events.html
+++ b/events.html
@@ -14,11 +14,11 @@
   <header>
     <div class="header-container">
         <label for="menu-checkbox" class="hamburger-icon"><i class="fas fa-bars"></i></label>
-       
+        <input type="checkbox" id="menu-checkbox">
         <a href="index.html" class="logo">Community Science Museum</a>
      <div class="nav-bottom">
         <nav>
-          <ul>
+          <ul class="nav-ul">
             <li><a href="index.html">Home</a></li>
             <li><a href="events.html" class="active">Events</a></li>
             <li><a href="exhibition.html">Exhibition</a></li>
@@ -80,14 +80,13 @@
                     <a href="contact.html" class="cta_events">Sign up</a>
             </div>
         </section>
-
     </main>
     <footer>
         <div class="footer-container">
             <div class="help">
               <h4 class="footer-heading">Help</h4>
                 <ul>
-                  <li>Contact us</li>
+                  <li><a href="contact.html">Contact</a></li>
                   <li>Accessibility</li>
                   <li>Get involved</li>
                 </ul>
