--- a/exhibition.html
+++ b/exhibition.html
@@ -14,11 +14,11 @@
   <header>
     <div class="header-container">
         <label for="menu-checkbox" class="hamburger-icon"><i class="fas fa-bars"></i></label>
-       
+        <input type="checkbox" id="menu-checkbox">
         <a href="index.html" class="logo">Community Science Museum</a>
      <div class="nav-bottom">
         <nav>
-          <ul>
+          <ul class="nav-ul">
             <li><a href="index.html">Home</a></li>
             <li><a href="events.html">Events</a></li>
             <li><a href="exhibition.html" class="active">Exhibition</a></li>
@@ -39,13 +39,13 @@
           <div class="exhibition-image">
             <img class="exhibition_image" src="images/gallery-robot.jpg" alt="A white robot raising one arm up surrounded by a light blue background.">
           </div>
-          <div class="exhibition-text">
+          <div class="exhibition-text robot-text">
             <h2>Robotics and ai</h2>
             <hr class="line-exhibition">
             <p>The information revolution is here and robotics and artificial intelligence are the science of the future. From useful home applications 
               of AI to industrial uses of robotics, the future is here. You can even say hello and shake the hand of Rob the Robot.</p>
             <p>Bring the whole family with you and come try out our artificial intelligence robot. We also have VR glasses which are one of our most
-              popular activities here at the museum. Among other things, you can paint while wearing VR glasses.</p>
+               popular activities here at the museum. Among other things, you can paint while wearing VR glasses.</p>
           </div>
       </section>
           <hr class="line-exhibition-container">
@@ -55,10 +55,9 @@
             <hr class="line-exhibition">
             <p>Explore the wonders of our cosmos. Our fantastic exhibition, ‘The Sky Above Us’, explores the night sky and what we can see and know
                about the universe around us. We’ll locate the various constellations and galaxies that can be seenand learn a bit about the early 
-               navigators who used the stars to travel by.</p> 
+               navigators who used the stars to travel by.</p>
             <p>Follow the journey of our solar exploration: fromearly Arab traders, to Galileo’s telescope, 
                to the latest exploration of the planets in our solar system.</p> 
-            <p>Bring the whole family and learn more about our wonderful universe.</p>
           </div>
           <div class="exhibition-image">
             <img class="exhibition_image" src="images/exhibition-galaxy.jpg" alt="A galaxy in space surrounded by stars and beautiful blue tones.">
@@ -75,9 +74,9 @@
             <hr class="line-exhibition">
             <p>For centuries, philosophers and scientists have wrestled with the question of our origins. Wheredo we come from and how did we get here? 
               Since Darwin proposed his theory of evolution we have had a framework for exploring and understanding our place in this world</p>
-            <p>Discover the origins of life on this planet and how the species we know today have evolved our time.</p>
-            <p>You canalso take some time to meet a few of the creatures who didn’t survive, including our Woolly Mammoth, the Dodos, and a number 
-              of dinosaurs too.</p>
+            <p>Discover the origins of life on this planet and how the species we know today have evolved our time.
+              You canalso take some time to meet a few of the creatures who didn’t survive, including our Woolly Mammoth, the Dodos, and a number 
+              of dinosaurs too.</p> 
           </div>
       </section>
           <hr class="line-exhibition-container">
@@ -88,14 +87,15 @@
             <p>As we learn more and more of the impact humans are having on the planet, the more important it becomes that scientists explore how 
               to create a sustainable future not justfor humans but for the whole planet.</p>
             <p>In our ecology section of the museum, we unpack the dangers we currently face including global warming, extinction of species, 
-                and pollution. But we also focus on the positive ways we can all contribute to a brighter future</p>
-            <p>Learn more about what you can do for and contribute to a more environmentally friendly planet for our next generation.</p>  
+                and pollution. But we also focus on the positive ways we can all contribute to a brighter future. Learn more about what you can do 
+                for and contribute to a more environmentally friendly planet for our next generation.</p> 
           </div>
           <div class="exhibition-image">
             <img class="exhibition_image" src="images/exhibition-ice.jpg" alt="Large white glacier with blue tones surrounded by water.">
           </div>
       </section> 
           <div class="cta-item">
+              <a href="contact.html" class="cta-back">Back</a>
               <a href="contact.html" class="cta-tickets">By tickets</a>
           </div>
     </main>
@@ -104,7 +104,7 @@
           <div class="help">
             <h3 class="footer-heading">Help</h3>
               <ul>
-                <li>Contact us</li>
+                <li><a href="contact.html">Contact</a></li>
                 <li>Accessibility</li>
                 <li>Get involved</li>
               </ul>
