--- a/explore.html
+++ b/explore.html
@@ -14,11 +14,11 @@
   <header>
     <div class="header-container">
         <label for="menu-checkbox" class="hamburger-icon"><i class="fas fa-bars"></i></label>
-       
+        <input type="checkbox" id="menu-checkbox">
         <a href="index.html" class="logo">Community Science Museum</a>
      <div class="nav-bottom">
         <nav>
-          <ul>
+          <ul class="nav-ul">
             <li><a href="index.html">Home</a></li>
             <li><a href="events.html">Events</a></li>
             <li><a href="exhibition.html">Exhibition</a></li>
@@ -56,8 +56,8 @@
             <hr class="line-explore">
             <p>As a community-driven museum, we want to work with schools to create places of learning and exploring.</p>
             <p>Our team are on hand to give your students guided tours of the museum, teach them in our learning laboratory, and provide great video 
-              presentations that will excite and inspire them.</p>
-            <p>Please get in touch with us here to find out more about our facilities and to arrange a time to bring your students through for a visit.</p>
+              presentations that will excite and inspire them.
+              Please get in touch with us here to find out more about our facilities and to arrange a time to bring your students through for a visit.</p>
           </div>
           <div class="explore-image">
             <img class="explore_image" src="images/explore-teachers.jpg" alt="A group of people with their backs turned are looking at a painting.">
@@ -73,8 +73,8 @@
             <hr class="line-explore">
             <p>Are you looking to get involved with our team of researchers and academics? Our museum offers various ways for you to use our resources 
                and contribute towards them.</p>
-            <p>We have online records, laboratory space, and a working relationship with a number of universities around the country.</p>
-            <p>Contact us if you have any questions or for more information about this.</p>
+            <p>We have online records, laboratory space, and a working relationship with a number of universities around the country.
+              Contact us if you have any questions or for more information about this.</p>
           </div>
       </section>
     </main>
@@ -83,7 +83,7 @@
           <div class="help">
             <h3 class="footer-heading">Help</h3>
               <ul>
-                <li>Contact us</li>
+                <li><a href="contact.html">Contact</a></li>
                 <li>Accessibility</li>
                 <li>Get involved</li>
               </ul>
