--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
     <header>
      <div class="header-container">
       <label for="menu-checkbox" class="hamburger-icon"><i class="fas fa-bars"></i></label>
-      <input type="checkbox" id="menu-checkbox"> 
-         <a href="index.html" class="logo">Community Science Museum</a>
+      <input type="checkbox" id="menu-checkbox">
+         <a href="index.html" class="logo">Community Science Museum</a> 
       <div class="nav-bottom">
          <nav>
-           <ul>
+           <ul class="nav-ul">
              <li><a href="index.html" class="active">Home</a></li>
              <li><a href="events.html">Events</a></li>
              <li><a href="exhibition.html">Exhibition</a></li>
@@ -54,8 +54,8 @@
            <hr class="events-info-line">
            <p>It is our pleasure to announce that Prof Sheila Widnall fromthe Massachusetts Institute of Technology will be delivering 
             3 lectures on the development of aeronautics and where the future lies in this exciting space.</p>
-            <a href="contact.html" class="cta_events">Sign up</a>  
-         </div>
+           <a href="contact.html" class="cta_events">Sign up</a>  
+         </div> 
         </section>
         <h3 class="explore">Explore</h3>
         <section class="info-container">
@@ -93,7 +93,7 @@
                 <h5 class="welcome-heading">Welcome to community</h5>
                 <p class="welcome-heading">science museum</p>
               </div>
-                <p>Over the course of human history, science has developed from our early understanding of fire, wind, water, and earth to exploring 
+                <p class="welcome-small-text">Over the course of human history, science has developed from our early understanding of fire, wind, water, and earth to exploring 
                     everything from galaxies far away to the very building blocks of life itself. The aim of our museum is to create a space 
                     where everyone can experience the wonders of our discoveries and perhaps even ignite a lifelong passion to continue the 
                     exploration of the world around us.
@@ -156,7 +156,7 @@
             <div class="help">
               <h6 class="footer-heading">Help</h6>
                 <ul>
-                  <li>Contact us</li>
+                  <li><a href="contact.html">Contact</a></li>
                   <li>Accessibility</li>
                   <li>Get involved</li>
                 </ul>
