made some changes

--- a/events.html
+++ b/events.html
@@ -36,7 +36,7 @@
             <h1 class="events-heading">Special events</h1>
             <hr class="line-events-heading">
         <section class="events-container">
-            <div class="circle-conteiner">
+            <div class="circle-container">
              <div class="circle-text">
               <h2>Today's Event</h2>
               <p>10:30-11:30</p>
@@ -51,7 +51,7 @@
             </div>
           </section>
           <section class="events-container"> 
-            <div class="circle-conteiner">
+            <div class="circle-container">
              <div class="circle-text">
               <h2>Today's Events</h2>
               <p>11:30-12:30</p>
@@ -66,7 +66,7 @@
             </div>
           </section>
           <section class="events-container"> 
-            <div class="circle-conteiner">
+            <div class="circle-container">
              <div class="circle-text">
               <h2>Today's Event</h2>
               <p>12:30-13:30</p>
