--- a/exhibition.html
+++ b/exhibition.html
@@ -39,7 +39,7 @@
           <div class="exhibition-image">
             <img class="exhibition_image" src="images/gallery-robot.jpg" alt="A white robot raising one arm up surrounded by a light blue background.">
           </div>
-          <div class="exhibition-text robot-text">
+          <div class="exhibition-text">
             <h2>Robotics and ai</h2>
             <hr class="line-exhibition">
             <p>The information revolution is here and robotics and artificial intelligence are the science of the future. From useful home applications 
