--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     </header>
     <main>
         <section class="events-container">
-         <div class="circle-conteiner">
+         <div class="circle-container">
           <div class="circle-text">
             <h1>Today's Event</h1>
             <p>10:30-11:30</p>
