fixed visit page

--- a/visit.html
+++ b/visit.html
@@ -39,13 +39,13 @@
        <div class="visit-container">
         <div class="visit-info">
           <h2><strong>Hours</strong></h2>
-          <p class="visit-open">Monday: Closed</p>
-          <P class="visit-open"></P>Tuesday: 10:00 – 16:00</p>
-          <P class="visit-open"></P>Wednesday: 10:00 – 16:00</p>
-          <P class="visit-open"></P>Thursday: 10:00 – 16:00</p>
-          <P class="visit-open"></P>Friday: 10:00 – 19:00</p>
-          <P class="visit-open"></P>Saturday: 9:00 – 16:00</p>
-          <P class="visit-open"></P>Sunday: 9:00 – 13:00</p>
+          <p>Monday: Closed</p>
+          <P>Tuesday: 10:00 – 16:00</p>
+          <P>Wednesday: 10:00 – 16:00</p>
+          <P>Thursday: 10:00 – 16:00</p>
+          <P>Friday: 10:00 – 19:00</p>
+          <P>Saturday: 9:00 – 16:00</p>
+          <P>Sunday: 9:00 – 13:00</p>
           <h2><strong>Accessibility</strong></h2> 
           <p>The museum has wheelchair accessibility ramps. It also has audio guides and braille display signs for 
              the visually impaired.</p>
