fixed colors, visit page

--- a/explore.html
+++ b/explore.html
@@ -77,6 +77,10 @@
               Contact us if you have any questions or for more information about this.</p>
           </div>
       </section>
+      <div class="cta-item">
+        <a href="contact.html" class="cta-back">Back</a>
+        <a href="contact.html" class="cta-tickets">By tickets</a>
+    </div>
     </main>
     <footer>
       <div class="footer-container">
