--- a/visit.html
+++ b/visit.html
@@ -82,6 +82,10 @@
           <img class="visit_image" src="images/visit-cafe.jpg" alt="Cafe with table and chairs and a large window in the 
            background. A green plant in the foreground of the picture.">
       </section>
+      <div class="cta-item">
+        <a href="contact.html" class="cta-back">Back</a>
+        <a href="contact.html" class="cta-tickets">By tickets</a>
+    </div>
     </main>
     <footer>
       <div class="footer-container">
