--- a/contact.html
+++ b/contact.html
@@ -59,6 +59,10 @@
         </figure>
       </div>
       </section> 
+      <div class="cta-item">
+        <a href="contact.html" class="cta-back">Back</a>
+        <a href="contact.html" class="cta-tickets">By tickets</a>
+    </div>
     </main>
     <footer>
       <div class="footer-container">
