--- a/events.html
+++ b/events.html
@@ -80,6 +80,10 @@
                     <a href="contact.html" class="cta_events">Sign up</a>
             </div>
         </section>
+        <div class="cta-item">
+          <a href="contact.html" class="cta-back">Back</a>
+          <a href="contact.html" class="cta-tickets">By tickets</a>
+      </div>
     </main>
     <footer>
         <div class="footer-container">
