fixed visit and contact page img

--- a/visit.html
+++ b/visit.html
@@ -76,7 +76,9 @@
           <p>Our shop offers a range of memorabilia from the museum as well as great gifts and activity packs that allow you to 
             continue to explore science even after you’ve left the museum.</p>
           <p>We also have lots of great gifts for children and adults. Bring the whole family and explore our store.</p>
-          <p>If you join our customer club, you get 20% off an item.</p>
+          <p>If you join our customer club, you get 20% off an item.With our customer club, you also receive lots 
+            of other great discounts, such as in our cafe, on our guided tours and much more. You will also be sent 
+            an overview of activities and when upcoming events are.</p>
         </div> 
         <figure class="visit-food-info">
           <img class="visit_image" src="images/visit-cafe.jpg" alt="Cafe with table and chairs and a large window in the 
