--- a/explore.html
+++ b/explore.html
@@ -78,7 +78,7 @@
           </div>
       </section>
       <div class="cta-item">
-        <a href="contact.html" class="cta-back">Back</a>
+        <a href="index.html" class="cta-back">Back</a>
         <a href="contact.html" class="cta-tickets">By tickets</a>
     </div>
     </main>
