--- a/exhibition.html
+++ b/exhibition.html
@@ -95,7 +95,7 @@
           </div>
       </section> 
           <div class="cta-item">
-              <a href="contact.html" class="cta-back">Back</a>
+              <a href="index.html" class="cta-back">Back</a>
               <a href="contact.html" class="cta-tickets">By tickets</a>
           </div>
     </main>
