--- a/visit.html
+++ b/visit.html
@@ -85,7 +85,7 @@
            background. A green plant in the foreground of the picture.">
       </section>
       <div class="cta-item">
-        <a href="contact.html" class="cta-back">Back</a>
+        <a href="index.html" class="cta-back">Back</a>
         <a href="contact.html" class="cta-tickets">By tickets</a>
     </div>
     </main>
