cleaned up the code

--- a/exhibition.html
+++ b/exhibition.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <menta name="description" content="Visit the nordics largest and coolest Community science museum for children, teenagers and adults">
+    <menta name="description" content="Explore what the Nordics' largest Community science museum for children, teenagers and adults has to 
+    offer in terms of experiences">
     <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/b318972c4d.js" crossorigin="anonymous"></script>
     <title>Community Science Museum | Exhibition spaces</title>
@@ -33,8 +34,8 @@
     </div>
   </header>
     <main>
-        <h1 class="exhibition-heading">Exhibition spaces</h1>
-        <hr class="line-exhibition-heading">
+         <h1 class="exhibition-heading">Exhibition spaces</h1>
+         <hr class="line-exhibition-heading">
       <section class="exhibition-container">
           <div class="exhibition-image">
             <img class="exhibition_image" src="images/gallery-robot.jpg" alt="A white robot raising one arm up surrounded by a light blue background.">
@@ -53,10 +54,10 @@
           <div class="exhibition-text">
             <h2>Cosmology</h2>
             <hr class="line-exhibition">
-            <p>Explore the wonders of our cosmos. Our fantastic exhibition, ‘The Sky Above Us’, explores the night sky and what we can see and know
-               about the universe around us. We’ll locate the various constellations and galaxies that can be seenand learn a bit about the early 
+            <p>Explore the wonders of our cosmos. Our fantastic exhibition, The Sky Above Us, explores the night sky and what we can see and know
+               about the universe around us. We'll locate the various constellations and galaxies that can be seenand learn a bit about the early 
                navigators who used the stars to travel by.</p>
-            <p>Follow the journey of our solar exploration: fromearly Arab traders, to Galileo’s telescope, 
+            <p>Follow the journey of our solar exploration: fromearly Arab traders, to Galileo's telescope, 
                to the latest exploration of the planets in our solar system.</p> 
           </div>
           <div class="exhibition-image">
