--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <menta name="description" content="Visit the nordics largest and coolest Community science museum for children, teenagers and adults">
+    <menta name="description" content="Contact us for more information about the Nordics' largest Community science museum for 
+    children, teenagers and adults">
     <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/b318972c4d.js" crossorigin="anonymous"></script>
     <title>Community Science Museum | Contact us</title>
@@ -54,15 +55,15 @@
           </div>
           </form>
           <figure class="contact-img-container">
-          <img class="contact-image" src="images/contact-us-museum.jpg" alt="A long corridor inside a beautiful museum. Where at the end there is an 
-          arched door">
-        </figure>
-      </div>
+            <img class="contact-image" src="images/contact-us-museum.jpg" alt="A long corridor inside a beautiful museum. Where at the end there is an 
+            arched door">
+          </figure>
+        </div>
       </section> 
-      <div class="cta-item">
+      <div class="cta-item-contact">
         <a href="index.html" class="cta-back">Back</a>
         <a href="contact.html" class="cta-tickets">By tickets</a>
-    </div>
+      </div>
     </main>
     <footer>
       <div class="footer-container">
