--- a/events.html
+++ b/events.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <menta name="description" content="Visit the nordics largest and coolest Community science museum for children, teenagers and adults">
+    <menta name="description" content="Explore what the Nordics' largest Community science museum for children, 
+    teenagers and adults has to offer in terms of events">
     <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/b318972c4d.js" crossorigin="anonymous"></script>
     <title>Community Science Museum | Special events</title>
@@ -16,7 +17,7 @@
         <label for="menu-checkbox" class="hamburger-icon"><i class="fas fa-bars"></i></label>
         <input type="checkbox" id="menu-checkbox">
         <a href="index.html" class="logo">Community Science Museum</a>
-     <div class="nav-bottom">
+      <div class="nav-bottom">
         <nav>
           <ul class="nav-ul">
             <li><a href="index.html">Home</a></li>
@@ -33,15 +34,15 @@
     </div>
   </header>
     <main>
-            <h1 class="events-heading">Special events</h1>
-            <hr class="line-events-heading">
+          <h1 class="events-heading">Special events</h1>
+          <hr class="line-events-heading">
         <section class="events-container">
-            <div class="circle-container">
+          <div class="circle-container">
              <div class="circle-text">
-              <h2>Today's Event</h2>
-              <p>10:30-11:30</p>
+               <h2>Today's Event</h2>
+               <p>10:30-11:30</p>
              </div>
-            </div>
+          </div>
             <div class="events-text">
               <h3 class="events_heading">Visiting professor of aeronautics</h3>
               <hr class="line-events">
@@ -49,41 +50,41 @@
               3 lectures on the development of aeronautics and where the future lies in this exciting space.</p>
               <a href="contact.html" class="cta_events">Sign up</a>
             </div>
-          </section>
-          <section class="events-container"> 
+        </section>
+        <section class="events-container"> 
             <div class="circle-container">
-             <div class="circle-text">
-              <h2>Today's Events</h2>
-              <p>11:30-12:30</p>
-             </div>
+               <div class="circle-text">
+                 <h2>Today's Events</h2>
+                 <p>11:30-12:30</p>
+               </div>
             </div>
             <div class="events-text">
                 <h3 class="events_heading">Night in museum</h3>
                 <hr class="line-events">
                 <p>Get your family together for an exciting night in the museum as you sleep over beside dinosaurs and science displays. 
-                    Bring your own sleeping bag and get ready to rough it as we go exploring the wonders of science.</p>
+                   Bring your own sleeping bag and get ready to rough it as we go exploring the wonders of science.</p>
                 <a href="contact.html" class="cta_events">Sign up</a>
             </div>
           </section>
           <section class="events-container"> 
             <div class="circle-container">
-             <div class="circle-text">
-              <h2>Today's Event</h2>
-              <p>12:30-13:30</p>
-             </div>
+               <div class="circle-text">
+                 <h2>Today's Event</h2>
+                 <p>12:30-13:30</p>
+               </div>
             </div>
             <div class="events-text">
                 <h3 class="events_heading">Energetica exhibition on loan</h3>
                 <hr class="line-events">
                 <p>On loan from the NEMO Science Museum in Amsterdam, the Energetica exhibition is coming to the Community Science Museum. 
-                    It’s a series of installations that allow visitors to experience the power of the elements as we harness them.</p>
-                    <a href="contact.html" class="cta_events">Sign up</a>
+                   It's a series of installations that allow visitors to experience the power of the elements as we harness them.</p>
+                <a href="contact.html" class="cta_events">Sign up</a>
             </div>
         </section>
         <div class="cta-item">
           <a href="index.html" class="cta-back">Back</a>
           <a href="contact.html" class="cta-tickets">By tickets</a>
-      </div>
+        </div>
     </main>
     <footer>
         <div class="footer-container">
