--- a/visit.html
+++ b/visit.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <menta name="description" content="Visit the nordics largest and coolest Community science museum for children, teenagers and adults">
+    <menta name="description" content="Visit the Nordics' largest Community science museum for children, teenagers and adults and see 
+    visitor information">
     <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/b318972c4d.js" crossorigin="anonymous"></script>
     <title>Community Science Museum | Visit community science museum</title>
@@ -39,13 +40,13 @@
        <div class="visit-container">
         <div class="visit-info">
           <h2><strong>Hours</strong></h2>
-          <p>Monday: Closed</p>
-          <P>Tuesday: 10:00 – 16:00</p>
-          <P>Wednesday: 10:00 – 16:00</p>
-          <P>Thursday: 10:00 – 16:00</p>
-          <P>Friday: 10:00 – 19:00</p>
-          <P>Saturday: 9:00 – 16:00</p>
-          <P>Sunday: 9:00 – 13:00</p>
+          <p>Monday: <strong class="closed">Closed</strong></p>
+          <P>Tuesday: 10:00-16:00</p>
+          <P>Wednesday: 10:00-16:00</p>
+          <P>Thursday: 10:00-16:00</p>
+          <P>Friday: 10:00-19:00</p>
+          <P>Saturday: 9:00-16:00</p>
+          <P>Sunday: 9:00-13:00</p>
           <h2><strong>Accessibility</strong></h2> 
           <p>The museum has wheelchair accessibility ramps. It also has audio guides and braille display signs for 
              the visually impaired.</p>
@@ -84,10 +85,10 @@
           <img class="visit_image" src="images/visit-cafe.jpg" alt="Cafe with table and chairs and a large window in the 
            background. A green plant in the foreground of the picture.">
       </section>
-      <div class="cta-item">
+      <div class="cta-item-visit">
         <a href="index.html" class="cta-back">Back</a>
         <a href="contact.html" class="cta-tickets">By tickets</a>
-    </div>
+      </div>
     </main>
     <footer>
       <div class="footer-container">
