fixed CTA button, cleaned up the code

--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <menta name="description" content="Contact us for more information about the Nordics' largest Community science museum for 
-    children, teenagers and adults">
+    children, teenagers and adults.">
     <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/b318972c4d.js" crossorigin="anonymous"></script>
     <title>Community Science Museum | Contact us</title>
@@ -62,7 +62,7 @@
       </section> 
       <div class="cta-item-contact">
         <a href="index.html" class="cta-back">Back</a>
-        <a href="contact.html" class="cta-tickets">By tickets</a>
+        <a href="contact.html" class="cta-tickets">Buy tickets</a>
       </div>
     </main>
     <footer>
