--- a/explore.html
+++ b/explore.html
@@ -80,7 +80,7 @@
       </section>
       <div class="cta-item">
         <a href="index.html" class="cta-back">Back</a>
-        <a href="contact.html" class="cta-tickets">By tickets</a>
+        <a href="contact.html" class="cta-tickets">Buy tickets</a>
     </div>
     </main>
     <footer>
