--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <menta name="description" content="Visit the nordics largest and coolest Community science museum for children, teenagers and adults">
+    <menta name="description" content="Visit the nordics largest and coolest Community science museum for children, teenagers and adults.">
     <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/b318972c4d.js" crossorigin="anonymous"></script>
     <title>Community Science Museum | Home</title>
