--- a/visit.html
+++ b/visit.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <menta name="description" content="Visit the Nordics' largest Community science museum for children, teenagers and adults and see 
-    visitor information">
+    visitor information.">
     <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/b318972c4d.js" crossorigin="anonymous"></script>
     <title>Community Science Museum | Visit community science museum</title>
@@ -75,7 +75,7 @@
             a long day at the museum.</p> 
           <h2><strong>Shop</strong></h2>
           <p>Our shop offers a range of memorabilia from the museum as well as great gifts and activity packs that allow you to 
-            continue to explore science even after you’ve left the museum.</p>
+            continue to explore science even after you've left the museum.</p>
           <p>We also have lots of great gifts for children and adults. Bring the whole family and explore our store.</p>
           <p>If you join our customer club, you get 20% off an item.With our customer club, you also receive lots 
             of other great discounts, such as in our cafe, on our guided tours and much more. You will also be sent 
@@ -87,7 +87,7 @@
       </section>
       <div class="cta-item-visit">
         <a href="index.html" class="cta-back">Back</a>
-        <a href="contact.html" class="cta-tickets">By tickets</a>
+        <a href="contact.html" class="cta-tickets">Buy tickets</a>
       </div>
     </main>
     <footer>
