fixed line under explore on home page

--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
          </div> 
         </section>
         <h3 class="explore">Explore</h3>
+        <hr class="line-explore-heading">
         <section class="info-container">
             <div class="info-card">
                 <h4 class="text_card">Explore</h4>
